--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^4.1",
         "league/omnipay": "^3.2",
         "omnipay/paypal": "^3.0",
         "stripe/stripe-php": "^9.7",
